# LISBETH

./: .gitignore  CONTRIBUTING.md  MASTER_PLAN.md  PLAN_20251015.md  README.md  RESEARCH_METHODOLOGY.md  media_list_template.csv  pipeline_manager.py  pyproject.toml  requirements.txt  run_qa.sh  run_report.sh
academic/: INTRO_TFM.md  Reporte_Comparativo_Modelos.html  Reporte_Comparativo_Modelos.ipynb  Reporte_Integral_TFM.html  Reporte_Integral_TFM.ipynb
data/: dimensiones_ancla.json  media_list.csv  yape_20200301_20200501.csv  yape_dataset.csv  yape_sample.csv
english_experiment/: anchors.json  media_list.csv
notebooks/: Final_Dataset_EDA.ipynb  Harvest_Report.ipynb  Phase2_EDA.ipynb  Phase4_Results_Report.html  Phase4_Results_Report_Fixed.ipynb  debug_test.ipynb  phase2_demo.ipynb  phase2_eda_check.ipynb  phase2_validation_report.ipynb  phase3_analysis.ipynb  phase3_analysis_results.ipynb  phase3_analysis_viewer.ipynb  phase3_complete_analysis.ipynb  phase3_complete_executed.ipynb  phase3_demo.ipynb  phase3_demo_executed.ipynb
scripts/: adapt_legacy_to_dual.py  audit_project.py  audit_raw_data.py  check_resume_dates.py  compare_embedding_models_execution.py  create_academic_report_nb.py  create_comparison_notebook.py  create_phase3_notebook.py  create_phase4_notebook.py  debug_data.py  debug_model_load.py  export_results_csv.py  extract_nb_code.py  fix_cache.py  generate_report_assets.py  harvest_all_years.sh  merge_data_updates.py  phase2_eda.py  resume_harvest_smart.sh  run_phase3.py  run_phase3_pipeline.py  standardize_data.py  test_tokenizer.py  (+5 more)
src/: cli.py
(+134 files in other folders)
