[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lisbeth-news-harvester"
version = "0.1.0"
description = "Herramienta para descargar noticias de periódicos peruanos"
readme = "README.md"
authors = [
  { name = "Alex" }
]
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.3",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "feedparser>=6.0.11",
  "python-dotenv>=1.0.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "httpx>=0.27.2",
  "orjson>=3.10.7",
  "pandas>=2.2.3",
  "tenacity>=8.2.3",
  "trafilatura>=1.6.0",
  "fake-useragent>=1.5.1",
  "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:torch.*:",
    "ignore::DeprecationWarning:sys.*:",
]

